--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -70,3 +70,24 @@ body {
   width: 100%;
   margin-top: 0.25rem;
 }
+
+.avatar {
+  max-width: 128px;
+  max-height: 128px;
+  border-radius: 50%;
+
+  &.avatar-medium {
+      max-width: 64px;
+      max-height: 64px;
+  }
+
+  &.avatar-mini {
+      max-width: 32px;
+      max-height: 32px;
+  }
+
+  &.avatar-micro {
+      max-width: 20px;
+      max-height: 20px;
+  }
+}
