--- a/templates/partials/header.html.twig
+++ b/templates/partials/header.html.twig
@@ -1,5 +1,5 @@
 <nav id="navhome" class="navbar navbar-expand-lg navbar-light fixed-top">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="{{ path('homepage') }}">
         <img src="{{ asset('img/library/hbtlogo.png') }}" width="32" height="32" class="d-inline-block align-top" alt="">
         <span class="nav-title">HappyBizTrip</span>
     </a>
@@ -8,11 +8,19 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
         <div class="navbar-nav">
-            <a class="nav-item nav-link active" href="#">{{ 'menu.home_home'|trans }} <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">{{ 'menu.home_concept'|trans }}</a>
-            <a class="nav-item nav-link" href="#">{{ 'menu.home_price'|trans }}</a>
+            {% if app.user %}
+                <a class="nav-link" href="#">
+                    <i class="fas fa-envelope-open"></i>&nbsp;Messages
+                    <span class="badge-pill badge-dark">9</span>
+                </a>
+                <a class="nav-link" href="#"><i class="fas fa-plane-departure"></i>&nbsp;Mes BizTrip</a>
+            {% else %}
+                <a class="nav-item nav-link active" href="#">{{ 'menu.home_home'|trans }} <span class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="#">{{ 'menu.home_concept'|trans }}</a>
+                <a class="nav-item nav-link" href="#">{{ 'menu.home_price'|trans }}</a>
+            {% endif %}
         </div>
-        <ul class="navbar-nav ml-auto mr-4">
+        <ul class="navbar-nav ml-auto mr-2">
             <li class="nav-item dropdown">
                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false" aria-haspopup="true" id="locales">
                     <i class="fa fa-globe" id="lang"></i> {{ app.request.locale|capitalize }}
@@ -26,8 +34,28 @@
                 </div>
             </li>
         </ul>
-        <a href="{{ path('hbt_login') }}">
-            <button class="btn btn-outline-happyDarkBlue btn-sm my-2 my-sm-0">{{ 'menu.home_sign_in'|trans }}</button>
-        </a>
+        {% if app.user %}
+        <ul class="navbar-nav mr-2">
+            <li class="nav-item dropdown">
+                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown" id="accountDropdownLink">
+                    <img src="{{ app.user.avatar }}" class="avatar avatar-mini" alt="Avatar de {{ app.user.pseudo }}">
+                    &nbsp;{{ app.user.pseudo }}
+                </a>
+                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="accountDropdownLink">
+                    <a href="#" class="dropdown-item">Créer un BizTrip</a>
+                    <div class="dropdown-divider"></div>
+                    <a href="#" class="dropdown-item">Mon profil</a>
+                    <a href="#" class="dropdown-item">Mon abonnement</a>
+                    <a href="#" class="dropdown-item">Modifier mon mot de passe</a>
+                    <div class="dropdown-divider"></div>
+                    <a href="{{ path('hbt_logout') }}" class="dropdown-item">Deconnexion</a>
+                </div>
+            </li>
+        </ul>
+        {% else %}
+            <a href="{{ path('hbt_login') }}">
+                <button class="btn btn-outline-happyDarkBlue btn-sm my-2 my-sm-0">{{ 'menu.home_sign_in'|trans }}</button>
+            </a>
+        {% endif %}
     </div>
 </nav>
