--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -28,7 +28,7 @@
         {% if app.user %}
             <div class="d-flex justify-content-center pt-2">
                 <div class="alert alert-info" role="alert" style="min-width: 20rem; max-width: 30rem;">
-                    <h4 class="alert-heading">{{ 'login.alert.heading'|trans }}</h4>
+                    <h4 class="alert-heading text-center">{{ 'login.alert.heading'|trans }}</h4>
                     <hr>
                     <p class="alert-connected">{{ 'login.alert.msg_loggued'|trans }}
                     <br><strong>{{ app.user.username }}</strong></p>
